<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_generate">

    <fragment
        android:id="@+id/nav_generate"
        android:name="net.decodex.demo.fragments.GeneratePersonFragment"
        android:label="@string/generate_user"
        tools:layout="@layout/fragment_generate_person">
        <action
            android:id="@+id/action_nav_generate_to_personDetailsFragment"
            app:destination="@id/personDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="net.decodex.demo.fragments.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_personDetailsFragment"
            app:destination="@id/personDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="net.decodex.demo.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="net.decodex.demo.fragments.FavoritePersonsFragment"
        android:label="@string/menu_favorite_persons"
        tools:layout="@layout/fragment_favorite_persons">
        <action
            android:id="@+id/action_nav_favorites_to_personDetailsFragment"
            app:destination="@id/personDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/personDetailsFragment"
        android:name="net.decodex.demo.fragments.PersonDetailsFragment"
        android:label="@string/person_details"
        tools:layout="@layout/fragment_person_details" >
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
</navigation>